# catalog

./: .gitignore  Makefile  README.md  TODO  cabal.project  catalog.cabal  stack.yaml  versionbump.sh
catalog-client/: catalog-client.cabal
catalog-client/app/: Main.hs
catalog-data/: catalog-data.cabal
catalog-data/src/Catalog/: Version.hs
catalog-data/src/Catalog/Html/Templates/: Blaze2.hs
catalog-data/src/Data/: CT.hs  FilePath.hs  History.hs  ImgNode.hs  ImgTree.hs  Journal.hs  MetaData.hs  RefTree.hs  TextPath.hs
catalog-data/src/Data/Prim/: Constants.hs  GPS.hs  Geometry.hs  ImageType.hs  Name.hs  ObjId.hs  Path.hs  Path1.hs  Prelude.hs  ReqType.hs
catalog-data/src/Text/: Pretty.hs  SimpleParser.hs
catalog-mtl/: catalog-mtl.cabal
catalog-mtl/src/Catalog/: CheckSum.hs  InitState.hs  JsonCommands.hs  Sync.hs  Workflow.hs
catalog-polysemy/: catalog-polysemy.cabal
catalog-polysemy/src/Catalog/: CatEnv.hs  CatalogIO.hs  CopyRemove.hs  Effects.hs  Fold.hs  GenCheckSum.hs  GenCollections.hs  GenImages.hs  GenPages.hs  History.hs  Html.hs  ImgStore.hs  ImgTreeAccess.hs  ImgTreeModify.hs  Invariant.hs  Journal.hs  Logging.hs  Run.hs  RunExifTool.hs  SyncWithFileSys.hs  TextPath.hs  TimeStamp.hs
catalog-polysemy/src/Catalog/Data/: TextPath.hs
catalog-polysemy/src/Catalog/Effects/: CatCmd.hs
catalog-polysemy/src/Catalog/Effects/CatCmd/: Interpreter.hs
catalog-polysemy/src/Catalog/ImgTree/: Access.hs  Fold.hs  ImgStore.hs  Modify.hs
catalog-polysemy/src/Catalog/MetaData/: Exif.hs  ExifTool.hs  Sync.hs
catalog-polysemy/src/Options/Applicative/: CatEnv.hs  LogLevel.hs
catalog-servant/: catalog-servant.cabal
catalog-servant/app/: API.hs  Main.hs
client-polysemy/: client-polysemy.cabal
client-polysemy/app/: Main.hs
client-polysemy/app/Catalog/Effects/CatCmd/: ClientInterpreter.hs
client-polysemy/app/Client/: Commands.hs  Options.hs  Version.hs
client-polysemy/app/Client/Commands/: Interpreter.hs
client-polysemy/app/Client/Effects/: ClientCmd.hs
client-polysemy/app/Client/Effects/ClientCmd/: Interpreter.hs
client-polysemy/app/GPS/Effects/: GeoLocCmd.hs
client-polysemy/app/Options/Applicative/: HostPort.hs
client-polysemy/app/Server/: Commands.hs
client-polysemy/app/Server/Commands/: ClientInterpreter.hs
client-polysemy/src/Options/Applicative/: LogLevel.hs
client-polysemy/src/Polysemy/: Consume.hs  FileSystem.hs  HttpRequest.hs  Logging.hs
client-polysemy/src/Polysemy/Consume/: BGQueue.hs
client-polysemy/src/System/: ExecProg.hs  HttpRequest.hs
data/: .gitignore  geocache.json
data/assets/css/: edit.css  html-album.css  show.css
download/: getPicsExtremadura.sh  getcollection.sh
polysemy-tools/: polysemy-tools.cabal
polysemy-tools/src/Polysemy/: Cache.hs  Consume.hs  Delay.hs  EmbedExc.hs  ExecProg.hs  FileSystem.hs  HttpRequest.hs  Logging.hs  Time.hs
polysemy-tools/src/Polysemy/HttpRequest/: SimpleRequests.hs
polysemy-tools/src/Polysemy/State/: RunTMVar.hs
polysemy-tools/src/System/: ExecProg.hs  HttpRequest.hs
servant-polysemy/: servant-polysemy.cabal
servant-polysemy/app/: APIf.hs  Logger.hs  Main.hs  Options.hs
src/: .gitignore  Makefile  cabal.project  cabal.project.freeze  cabal.project.freeze.ghc-8.10.7  cabal.project.freeze.ghc-9.10.1  cabal.project.freeze.ghc-9.2.4  cabal.project.freeze.ghc-9.4.7  cabal.project.local
src/Catalog/: CheckSum.hs  Cmd.hs  CmdAPI.hs  EvalCmd.hs  FilePath.hs  InitState.hs  Journal.hs  JsonCommands.hs  Options.hs  Sync.hs  Version.hs  Workflow.hs
src/Data/: Catalog.hs  ImageStore.hs  ImgNode.hs  ImgTree.hs  MetaData.hs  Prim.hs  RefTree.hs  TextPath.hs
src/Text/: SimpleParser.hs
src/catalog-data/: catalog-data.cabal
src/catalog-data/src/Catalog/: Version.hs
src/catalog-data/src/Catalog/Html/Templates/: Blaze2.hs
src/catalog-data/src/Data/: Access.hs  CT.hs  ColEntrySet.hs  FilePath.hs  History.hs  ImageStore.hs  ImgNode.hs  ImgTree.hs  Journal.hs  MetaData.hs  NavTree.hs  Prim.hs  RefTree.hs  TextPath.hs
src/catalog-data/src/Data/ImgTree/: ImgNode.hs  ImgTree.hs  Invariants.hs  NavTree.hs  RefTree.hs
src/catalog-data/src/Data/Prim/: CheckSum.hs  CheckSumRes.hs  Constants.hs  GPS.hs  Geometry.hs  ImageType.hs  Name.hs  ObjId.hs  Path.hs  PathId.hs  PathPos.hs  Prelude.hs  ReqType.hs  SysPath.hs  TimeStamp.hs
src/catalog-data/src/Data/Text/: Fill.hs
src/catalog-data/src/Text/: ParsePretty.hs  SimpleParser.hs
src/catalog-polysemy/: catalog-polysemy.cabal
src/catalog-polysemy/src/: Test.hs
src/catalog-polysemy/src/Catalog/: CatEnv.hs  CatalogIO.hs  CopyRemove.hs  Effects.hs  GenCheckSum.hs  GenCollections.hs  GenImages.hs  GenPages.hs  History.hs  Html.hs  Invariant.hs  Journal.hs  Logging.hs  Run.hs  SyncKeywords.hs  SyncWithFileSys.hs  TextPath.hs  TimeStamp.hs
src/catalog-polysemy/src/Catalog/Effects/: CatCmd.hs
src/catalog-polysemy/src/Catalog/Effects/CatCmd/: Interpreter.hs
src/catalog-polysemy/src/Catalog/ImgTree/: Access.hs  Check.hs  Fold.hs  Modify.hs
src/catalog-polysemy/src/Catalog/MetaData/: Exif.hs  ExifTool.hs  Sync.hs
src/catalog-polysemy/src/Options/Applicative/: CatEnv.hs  HostPort.hs
src/catalog-test/: catalog-test.cabal
src/catalog-test/app/: Main.hs
src/client-polysemy/: client-polysemy.cabal
src/client-polysemy/app/: Main.hs
src/client-polysemy/app/Catalog/Effects/CatCmd/: ClientInterpreter.hs
src/client-polysemy/app/Client/: Options.hs  Version.hs
src/client-polysemy/app/Client/Effects/: ClientCmd.hs
src/client-polysemy/app/Client/Effects/ClientCmd/: Interpreter.hs
src/client-polysemy/app/GPS/Effects/: GeoLocCmd.hs
src/polysemy-tools/: polysemy-tools.cabal
src/polysemy-tools/src/Polysemy/: Cache.hs  Consume.hs  Delay.hs  EmbedExc.hs  ExecProg.hs  FileSystem.hs  HttpRequest.hs  Logging.hs  Time.hs
src/polysemy-tools/src/Polysemy/Consume/: BGQueue.hs
src/polysemy-tools/src/Polysemy/HttpRequest/: SimpleRequests.hs
src/polysemy-tools/src/Polysemy/State/: RunTMVar.hs
src/servant-polysemy/: servant-polysemy.cabal
src/servant-polysemy/app/: APIf.hs  Logger.hs  Main.hs  Options.hs
(+65 files in other folders)
