name:                catalog-client
version:             0.3.5.0
synopsis:            Client for catalog
homepage:            https://github.com/UweSchmidt/apps/catalog
license:             BSD3
license-file:        LICENSE
author:              Uwe Schmidt
copyright:           2020 Uwe Schmidt
category:            images
build-type:          Simple
cabal-version:       >=1.10

executable catalog-client
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base >= 4.7
                     , aeson
                     , bytestring
                     , directory
                     , filepath
                     , http-client
                     , http-types
                     , monad-reader-state-err-io
                     , mtl
                     , optparse-applicative
                     , text

                     -- local libs
                     , catalog-data
                     , catalog-mtl

  default-language:    Haskell2010

  GHC-Options: -Wall -fwarn-tabs -funbox-strict-fields -O2 -threaded

source-repository head
  type:     git
  location: https://github.com/UweSchmidt/apps/catalog
