name:                catalog-data
version:             0.3.1.0
synopsis:            basic data types of catalog system
description:         Please see README.md
homepage:            http://github.com/UweSchmidt/apps/catalog#readme
license:             BSD3
license-file:        LICENSE
author:              Uwe Schmidt
copyright:           Uwe Schmidt
category:            images
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src

  exposed-modules:   Data.FilePath
                     Data.ImgNode
                     Data.ImgTree
                     Data.ImageStore
                     Data.Journal
                     Data.MetaData
                     Data.RefTree
                     Data.TextPath
                     Data.Prim
                     Data.Prim.CheckSum
                     Data.Prim.CheckSumRes
                     Data.Prim.Constants
                     Data.Prim.GPS
                     Data.Prim.Geometry
                     Data.Prim.ImageType
                     Data.Prim.Name
                     Data.Prim.Path
                     Data.Prim.PathId
                     Data.Prim.PathPos
                     Data.Prim.Prelude
                     Data.Prim.ObjId
                     Data.Prim.ReqType
                     Data.Prim.SysPath
                     Data.Prim.TimeStamp

                     Data.CT
                     
                     Catalog.Html.Templates.Blaze2
                     Catalog.Version

                     Text.SimpleParser
                     
  -- Other library packages from which modules are imported.
  build-depends:     base                 >= 4.5
                   , blaze-html
                   , aeson                >= 0.8
                   , aeson-pretty         >= 0.8
                   , bytestring           >= 0.9
                   , containers           >= 0.4
                   , directory            >= 1.1
                   , filepath             >= 1
                   , lens                 >= 4.12
                   , murmur-hash          >= 0.1
                   , megaparsec
                   , mtl
                   , pureMD5              >= 2
                   , scientific           >= 0.3
                   , text                 >= 1.0
                   , time                 >= 1.5
                   , unix
                   , unordered-containers >= 0.2
                   , utf8-string          >= 1
                   , vector               >= 0.10

                   
  default-language:    Haskell2010

  GHC-Options: -Wall -fwarn-tabs -funbox-strict-fields -O2
