name:           catalog-polysemy
version:        0.1.0.0
description:    polysemy version of catalog
author:         Uwe Schmidt
maintainer:     Uwe Schmidt
copyright:      2020 Uwe Schmidt
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.12

source-repository head
  type:     git
  location: https://github.com/UweSchmidt/apps/catalog


library
  exposed-modules:    Catalog.CatEnv
                      Catalog.CatalogIO
                      Catalog.CopyRemove
                      Catalog.Effects
                      Catalog.GenCheckSum
                      Catalog.GenCollections
                      Catalog.GenImages
                      Catalog.Html
                      Catalog.ImgTree.Access
                      Catalog.ImgTree.Fold
                      Catalog.ImgTree.ImgStore
                      Catalog.ImgTree.Modify
                      Catalog.Invariant
                      Catalog.Journal
                      Catalog.Logging
                      Catalog.MetaData.ExifTool
                      Catalog.MetaData.Exif
                      Catalog.MetaData.Sync
                      Catalog.Run
                      Catalog.SyncWithFileSys
                      Catalog.TextPath
                      Catalog.TimeStamp
                                            
                      Paths_catalog_polysemy

  hs-source-dirs:     src

  default-extensions: ConstraintKinds
                      DataKinds
                      FlexibleContexts
                      GADTs
                      LambdaCase
                      OverloadedStrings
                      PolyKinds
                      RankNTypes
                      ScopedTypeVariables
                      TupleSections
                      TypeApplications
                      TypeFamilies
                      TypeOperators

  ghc-options: -Wall -fwarn-tabs -O2
               -funbox-strict-fields
               -flate-specialise
               -fspecialise-aggressively

  build-depends: aeson                >= 0.8
               , aeson-pretty
               , base                 >= 4.7 && <5
               , bytestring
               , containers           >= 0.4
               , directory
               , exceptions
               , filepath
               , http-client
               , http-types
               , lens                 >= 4.12
               , polysemy             >= 1.2.3
               , process
               , text
               , transformers
               , unix
               , unordered-containers >= 0.2
               , utf8-string          >= 1
               , vector               >= 0.10
                                    , wai
                 -- server stuff, preliminary, to be moved to an app
               , async
               , stm
               , servant
               , servant-blaze
               , servant-server
               , wai-app-static
               , wai-logger
               , warp

               -- local libraries
               , catalog
               , polysemy-tools
               
  default-language: Haskell2010
