name:                catalog-servant
version:             0.3.5.4
synopsis:            Servant server for catalog
homepage:            https://github.com/UweSchmidt/apps/catalog
license:             BSD3
license-file:        LICENSE
author:              Uwe Schmidt
copyright:           2018 Uwe Schmidt
category:            images
build-type:          Simple
cabal-version:       >=1.10

executable catalog-servant
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       API

  build-depends:       base >= 4.7
                     , async
                     , base-compat
                     , blaze-html
                     , bytestring
                     , directory
                     , filepath
                     , ghc-prim
                     , http-api-data
                     , http-media
                     , monad-reader-state-err-io
                     , mtl
                     , servant
                     , servant-blaze
                     , servant-server
                     , stm
                     , text
                     , wai
                     , wai-app-static
                     , wai-logger
                     , warp

                     -- local libs
                     , catalog-data
                     , catalog-mtl
                     
                     
  default-language:    Haskell2010

  GHC-Options: -Wall -fwarn-tabs -funbox-strict-fields -O2 -threaded

source-repository head
  type:     git
  location: https://github.com/UweSchmidt/apps/catalog
