name:           client-polysemy
version:        0.2.9.1
description:    Catalog client with polysemy effect library
author:         Uwe Schmidt
maintainer:     Uwe Schmidt
copyright:      2020 Uwe Schmidt
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.12

source-repository head
  type:     git
  location: https://github.com/UweSchmidt/apps/catalog


executable client-polysemy
  main-is:            Main.hs
  other-modules:      Client.Commands
                      Client.Commands.Interpreter
                      Client.Options
                      Server.Commands
                      Server.Commands.ClientInterpreter

                      System.ExecProg
                      System.HttpRequest
                      
                      -- options for Polysemy.Logging
                      -- and         System.HttpRequest
                      Options.Applicative.HostPort
                      Options.Applicative.LogLevel

                      -- own Polysemy effects
                      Polysemy.Consume
                      Polysemy.Consume.BGQueue
                      Polysemy.EmbedExc
                      Polysemy.FileSystem
                      Polysemy.HttpRequest
                      Polysemy.Logging

                      Paths_client_polysemy

  hs-source-dirs:     app src

  default-extensions: ConstraintKinds
                      DataKinds
                      FlexibleContexts
                      GADTs
                      LambdaCase
                      OverloadedStrings
                      PolyKinds
                      RankNTypes
                      ScopedTypeVariables
                      TypeApplications
                      TypeFamilies
                      TypeOperators

  ghc-options: -threaded
               -rtsopts
               -with-rtsopts=-N
               -Wall -fwarn-tabs -O2
               -funbox-strict-fields
               -flate-specialise
               -fspecialise-aggressively

  build-depends: async                >= 2.2.2
               , aeson                >= 0.8
               , base                 >= 4.7 && <5
               , bytestring           >= 0.9
               , catalog
               , directory
               , exceptions
               , http-client
               , http-types
               , optparse-applicative
               , polysemy             >= 1.2.3
               , process
               , random
               , stm
               , text
               , unix
               
  default-language: Haskell2010
