name:           polysemy-tools
version:        0.3.0.3
description:    tool and extensions for polysemy effect library
author:         Uwe Schmidt
maintainer:     Uwe Schmidt
copyright:      2020 Uwe Schmidt
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.12

source-repository head
  type:     git
  location: https://github.com/UweSchmidt/apps/catalog


library
  exposed-modules:
                      -- own Polysemy effects
                  Polysemy.Consume
                  Polysemy.Consume.BGQueue
                  Polysemy.EmbedExc
                  Polysemy.ExecProg
                  Polysemy.FileSystem
                  Polysemy.HttpRequest
                  Polysemy.HttpRequest.SimpleRequests
                  Polysemy.Logging
                  Polysemy.State.RunTMVar
                  Polysemy.Time
                      
                  Paths_polysemy_tools

  hs-source-dirs:     src

  default-extensions: ConstraintKinds
                      DataKinds
                      FlexibleContexts
                      GADTs
                      LambdaCase
                      OverloadedStrings
                      PolyKinds
                      RankNTypes
                      ScopedTypeVariables
                      TypeApplications
                      TypeFamilies
                      TypeOperators

  ghc-options: -Wall -fwarn-tabs -O2
               -funbox-strict-fields
               -flate-specialise
               -fspecialise-aggressively

  build-depends: async                >= 2.2.2
               , aeson                >= 0.8
               , base                 >= 4.7 && <5
               , bytestring
               , directory
               , exceptions
               , http-client
               , http-types
               , polysemy             >= 1.2.3
               , process-extras
               , stm
               , text
               , unix
               
  default-language: Haskell2010
