name:                servant-polysemy
version:             0.5.1.0
synopsis:            Servant server for catalog done with polysemy
homepage:            https://github.com/UweSchmidt/apps/catalog
license:             BSD3
license-file:        LICENSE
author:              Uwe Schmidt
copyright:           2020 Uwe Schmidt
category:            images
build-type:          Simple
cabal-version:       >=1.10

executable servant-polysemy
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       APIf
                       Options
                       Logger

  build-depends:       async
                     , base >= 4.7
                     , base-compat
                     , blaze-html
                     , bytestring
                     , directory
                     , fast-logger >= 3.0.1
                     , filepath
                     , ghc-prim
                     , http-api-data
                     , http-media
                     , optparse-applicative
                     , polysemy
                     , servant
                     , servant-blaze
                     , servant-server
                     , stm
                     , text
                     , wai
                     , wai-app-static
                     , wai-logger
                     , warp
                     
                     -- local libs
                     , catalog-data
                     , catalog-polysemy
                     , polysemy-tools
                     
  default-language:    Haskell2010

  default-extensions: ConstraintKinds
                      DataKinds
                      FlexibleContexts
                      GADTs
                      LambdaCase
                      OverloadedStrings
                      PolyKinds
                      RankNTypes
                      ScopedTypeVariables
                      TupleSections
                      TypeApplications
                      TypeFamilies
                      TypeOperators

  ghc-options:  -Wall -fwarn-tabs -O2
                -funbox-strict-fields
                -flate-specialise
                -fspecialise-aggressively
                -threaded

source-repository head
  type:     git
  location: https://github.com/UweSchmidt/apps/catalog
