cabal-version: 2.0
name:          catalog-data
version:       0.5.11.5
synopsis:      basic data types of catalog system
description:   Please see README.md
homepage:      http://github.com/UweSchmidt/apps/catalog#readme
license:       BSD3
license-file:  LICENSE
author:        Uwe Schmidt
copyright:     Uwe Schmidt
category:      images
build-type:    Simple

library
  hs-source-dirs:     src
  exposed-modules:
    Catalog.Html.Templates.Blaze2
    Catalog.Version
    Data.Access
    Data.ColEntrySet
    Data.CT
    Data.History
    Data.ImageStore
    Data.ImgNode
    Data.ImgTree
    Data.Journal
    Data.MetaData
    Data.Prim
    Data.Prim.CheckSum
    Data.Prim.CheckSumRes
    Data.Prim.Constants
    Data.Prim.Geometry
    Data.Prim.GPS
    Data.Prim.ImageType
    Data.Prim.Name
    Data.Prim.ObjId
    Data.Prim.Path
    Data.Prim.PathId
    Data.Prim.PathPos
    Data.Prim.Prelude
    Data.Prim.ReqType
    Data.Prim.TimeStamp
    Data.RefTree
    Data.Text.Fill
    Data.TextPath
    Text.SimpleParser

  -- Other library packages from which modules are imported.
  build-depends:
      aeson                 >=2.2
    , aeson-pretty
    , base                  >=4.5
    , blaze-html
    , bytestring            >=0.9
    , containers            >=0.4
    , directory             >=1.1
    , filepath              >=1
    , lens                  >=4.12
    , megaparsec
    , mtl
    , murmur-hash           >=0.1
    , pureMD5               >=2
    , scientific            >=0.3
    , text                  >=1.0
    , time                  >=1.5
    , unix
    , unordered-containers  >=0.2
    , utf8-string           >=1
    , vector                >=0.10

  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  ghc-options:        -Wall -fwarn-tabs -funbox-strict-fields -O2
