cabal-version: 2.0
name:          polysemy-tools
version:       0.5.8.4
description:   tool and extensions for polysemy effect library
author:        Uwe Schmidt
maintainer:    Uwe Schmidt
copyright:     2020 Uwe Schmidt
license:       BSD3
license-file:  LICENSE
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/UweSchmidt/apps/catalog

library
  exposed-modules:
    Paths_polysemy_tools
    Polysemy.Cache
    Polysemy.Consume
    Polysemy.Consume.BGQueue
    Polysemy.Delay
    Polysemy.EmbedExc
    Polysemy.ExecProg
    Polysemy.FileSystem
    Polysemy.HttpRequest
    Polysemy.HttpRequest.SimpleRequests
    Polysemy.Logging
    Polysemy.State.RunTMVar
    Polysemy.Time

  -- own Polysemy effects
  hs-source-dirs:     src
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    FlexibleContexts
    GADTs
    LambdaCase
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators

  ghc-options:
    -Wall -fwarn-tabs -O2 -funbox-strict-fields -flate-specialise
    -fspecialise-aggressively -fplugin=Polysemy.Plugin

  build-depends:
      aeson            >=2.0
    , async            >=2.2.2
    , base             >=4.7
    , bytestring
    , containers
    , directory
    , exceptions
    , http-client
    , http-client-tls
    , http-types
    , polysemy
    , polysemy-plugin
    , process-extras
    , stm
    , text
    , unix

  default-language:   Haskell2010
